k8s/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-pv-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      containers:
      - image: mysql:5.7
        name: mysql
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql-pv-storage
        ports:
        - containerPort: 3306
        resources: {}
