k8s/webserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - image: seattleslough/webserver
        name: webserver
        ports:
        - containerPort: 80
        resources: {}
